// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHue accepts a hex value 1`] = `
<div>
  <div
    class="euiHue testClass1 testClass2 emotion-euiHue-euiTestCss"
  >
    <label
      class="emotion-euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <p
      aria-live="polite"
      class="emotion-euiScreenReaderOnly"
    >
      #00FFFF
    </p>
    <svg
      aria-hidden="true"
      class="euiHue__track emotion-euiHue__track"
      role="img"
    />
    <input
      aria-label="aria-label"
      class="euiHue__range emotion-euiHue__range"
      data-test-subj="test subject string"
      id="undefined-hue"
      max="359"
      min="0"
      step="1"
      type="range"
      value="180"
    />
  </div>
</div>
`;

exports[`EuiHue accepts a hue value 1`] = `
<div>
  <div
    class="euiHue testClass1 testClass2 emotion-euiHue-euiTestCss"
  >
    <label
      class="emotion-euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <p
      aria-live="polite"
      class="emotion-euiScreenReaderOnly"
    />
    <svg
      aria-hidden="true"
      class="euiHue__track emotion-euiHue__track"
      role="img"
    />
    <input
      aria-label="aria-label"
      class="euiHue__range emotion-euiHue__range"
      data-test-subj="test subject string"
      id="undefined-hue"
      max="359"
      min="0"
      step="1"
      type="range"
      value="180"
    />
  </div>
</div>
`;

exports[`EuiHue is rendered 1`] = `
<div>
  <div
    class="euiHue testClass1 testClass2 emotion-euiHue-euiTestCss"
  >
    <label
      class="emotion-euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <p
      aria-live="polite"
      class="emotion-euiScreenReaderOnly"
    />
    <svg
      aria-hidden="true"
      class="euiHue__track emotion-euiHue__track"
      role="img"
    />
    <input
      aria-label="aria-label"
      class="euiHue__range emotion-euiHue__range"
      data-test-subj="test subject string"
      id="undefined-hue"
      max="359"
      min="0"
      step="1"
      type="range"
      value="1"
    />
  </div>
</div>
`;
